# synapse

./: .gitignore  CLAUDE.md  GAP_CLOSURE_PLAN.md  GLASSES_INTEGRATION.md  IMPLEMENTATION_STATUS.md  PROJECT_ARCHITECTURE.md  README.md  SCOPE_STATUS_REVIEW_2026-06-24.md  SYSTEM_ARCHITECTURE.md  bunfig.toml  package.json
.claude/: launch.json
Neo-Gonzo Noir design system/: .thumbnail  Synapse Cockpit.dc.html
Neo-Gonzo Noir design system/uploads/: PROJECT_ARCHITECTURE.md
additional_features/contracts/: pdf_extended.py
additional_features/pdf/: convert_from_pdf.py  convert_to_pdf.py  forms.py  misc_ops.py  page_ops.py  security.py
apps/cli/: package.json
apps/cli/src/: index.ts
apps/cockpit/: .env.example  index.html  package.json  vite.config.ts
apps/cockpit/src/: App.css  App.tsx  featureFlags.ts  vite-env.d.ts
apps/cockpit/src-tauri/: tauri.conf.json
apps/glasses-bridge/: package.json
apps/glasses-bridge/src/: index.ts
apps/glasses-hub/: app.json  index.html  package.json  vite.config.ts
apps/glasses-hub/src/: main.ts
apps/glasses-study/: app.json  index.html  package.json  tsconfig.json  vite.config.ts
apps/glasses-study/src/: main.ts  wrap.test.ts  wrap.ts
apps/hud-relay/: package.json
apps/hud-relay/src/: claude-hud.ts  hud.ts  relay.ts
contracts/: __init__.py  capture.py  jobs.py  kb.py  pdf.py  planner.py  reason.py  sr.py  study.py
data/: README.md
docs/architecture/: GAP_CLOSURE_PLAN.md  SYSTEM_ARCHITECTURE.md
editor_core/model/: batch.py  differ.py  history.py  model.py  schema.py  writer.py
editor_core/model/operation/: move_operation.py  (+4 more)
editor_core/utils/: emitter.py  observable.py  priorities.py
extensions/obsidian-synapse/: manifest.json  package.json  tsconfig.json
extensions/zed-synapse/: Cargo.toml  README.md  extension.toml
features/: __init__.py
features/capture/: __init__.py  audio.py  mail.py  web.py
features/pdf/: __init__.py  async_ops.py  sync_ops.py
features/planner/: __init__.py  ontology.py  service.py
features/sr/: __init__.py  scheduler.py  service.py  store.py
jobs/: __init__.py  queue.py  registry.py  store.py
kernel/: .env.example  README.md  pyproject.toml
kernel/contracts/: __init__.py  models.py
kernel/features/: __init__.py  capture.py  pdf.py  planner.py  sr.py
kernel/jobs/: __init__.py  queue.py
kernel/src/synapse_engine/: __init__.py  api_server.py  config.py  llm.py  mcp_server.py
kernel/src/synapse_engine/code/: __init__.py
kernel/src/synapse_engine/features/: __init__.py  sr.py
kernel/src/synapse_engine/ingest/: __init__.py
kernel/src/synapse_engine/kb/: __init__.py
kernel/src/synapse_engine/reason/: __init__.py
kernel/src/synapse_engine/study/: __init__.py  extract.py
kernel/tests/: test_smoke.py
kernel/workers/: __init__.py  worker.py
synapse-engine/: .env.example  .gitignore  Makefile  README.md  pyproject.toml
synapse-engine/examples/sample_notes/: backpropagation.md  sliding-window.md
synapse-engine/src/synapse_engine/: __init__.py  api_server.py  cli.py  config.py  mcp_server.py  models.py
synapse-engine/src/synapse_engine/code/: assistant.py
synapse-engine/src/synapse_engine/ingest/: chunk.py  loaders.py  pipeline.py
synapse-engine/src/synapse_engine/kb/: embeddings.py  gatekeeper.py  rrf.py  store.py  vault.py
synapse-engine/src/synapse_engine/reason/: engine.py  llm.py  rerank.py  retriever.py
synapse-engine/src/synapse_engine/study/: __init__.py  _text.py  cheatsheet.py  flashcards.py  quiz.py
synapse-engine/tests/: test_chunk.py  test_engine.py  test_gatekeeper.py  test_retrieval.py  test_store.py
workers/: __init__.py  handlers.py  run.py
(+22 files in other folders)
