[project]
name = "synapse-engine"
version = "0.1.0"
description = "The Synapse kernel: FastMCP + FastAPI edges over a local-first knowledge platform."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Synapse" }]

# Core "edge" dependencies — everything needed to boot the MCP + REST surfaces.
# Heavy ML/ingest dependencies live in the optional groups below so the kernel
# stays fast to install for surface development. Install them with e.g.
#   uv pip install -e ".[ml,dev]"
dependencies = [
    "fastmcp>=2.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "httpx>=0.27",
]

[project.optional-dependencies]
# Hybrid retrieval (FTS5 is built into SQLite; sqlite-vec adds the vector index).
retrieval = ["sqlite-vec>=0.1.1"]
# Embeddings + LLM routing (Anthropic + Ollama via litellm).
ai = ["litellm>=1.40", "fastembed>=0.3"]
# Audio ingest.
audio = ["faster-whisper>=1.0"]
# PDF / document ingest.
pdf = ["pymupdf4llm>=0.0.17", "docling>=2.0"]
# Web article ingest.
web = ["trafilatura>=1.9"]
# Spaced repetition (FSRS-6). PyPI distribution is `fsrs` (the "Py-FSRS" project);
# import name is `fsrs`.
study = ["fsrs>=4.0"]
# Read-only Google Calendar sync for the planner.
calendar = ["google-api-python-client>=2.0", "google-auth-oauthlib>=1.2"]
# Everything heavy, in one shot.
ml = [
    "synapse-engine[retrieval,ai,audio,pdf,web,study,calendar]",
]
# Tooling.
dev = ["pytest>=8", "pytest-asyncio>=0.23", "ruff>=0.5", "mypy>=1.10"]

[project.scripts]
synapse-mcp = "synapse_engine.mcp_server:main"
synapse-api = "synapse_engine.api_server:main"
synapse-worker = "workers.worker:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# The architecture keeps `contracts/`, `features/`, `jobs/`, and `workers/` as
# top-level siblings of `src/` (see docs/architecture). Tell hatchling to ship
# all of them alongside the src-layout `synapse_engine` package.
[tool.hatch.build.targets.wheel]
packages = [
    "src/synapse_engine",
    "contracts",
    "features",
    "jobs",
    "workers",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
